--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 node_modules
+*.log
+.firebase
 
 # Output
 .output
@@ -7,6 +9,8 @@ node_modules
 .wrangler
 /.svelte-kit
 /build
+/dist
+/package
 
 # OS
 .DS_Store
