--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.4.11",
 		"vitest": "^2.0.4"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.7.2",
+		"bulma": "^1.0.3",
+		"firebase": "^11.1.0"
 	}
 }
